--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -1,8 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <div class="container">
+        <div class="row">
     {% for item in news %}
-        <p>{{ item.title }}</p>
-        <br>
+        <div class="col-sm-4 my-4">
+            <div class="news_block">
+                <div>
+                    <h2>{{ item.title }}</h2>
+                </div>
+                <div>
+                    <p>{{ item.picture }}</p>
+                </div>
+                <div>
+                    <p>{{ item.text }}</p>
+                </div>
+            </div>
+        </div>
     {% endfor %}
+            </div>
+    </div>
 {% endblock %}
