--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,9 @@
 <body>
 <header>
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">Наше приложение</a>
+        <a class="navbar-brand" href="/">Фишбург</a>
+        <a class="navbar-brand" href="/news">Новости</a>
+        <a class="navbar-brand" href="/products">Товары</a>
         {% if current_user.is_authenticated %}
         <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
         {% else %}
