--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+    {% if current_user.is_authenticated %}
+        {% if current_user.role.value == "moderator" %}
+            <a href="/news/edit" class="btn btn-primary mb-3">Редактировать</a>
+        {% endif %}
+    {% endif %}
     <div class="container">
         <div class="row">
     {% for item in news %}
