--- a/templates/news/news-item-edit-form.html
+++ b/templates/news/news-item-edit-form.html
@@ -1,37 +1,41 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Редактирование новости</h1>
-    <form action="" method="post" class="w-25 mx-auto">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.title.label }}<br>
-            {{ form.title(class="form-control") }}<br>
-            {% for error in form.title.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.text.label }}<br>
-            {{ form.text(class="form-control") }}<br>
-            {% for error in form.text.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.is_published.label }}<br>
-            {{ form.is_published() }}<br>
-            {% for error in form.is_published.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-        <div>{{ message }}</div>
-    </form>
+<div class="container d-flex justify-content-center">
+    <div class="register-form-wrapper p-5">
+        <h1 class="mb-3">Редактирование новости</h1>
+        <form action="" method="post" class="mx-auto">
+            {{ form.hidden_tag() }}
+            <p>
+                {{ form.title.label }}<br>
+                {{ form.title(class="form-control") }}<br>
+                {% for error in form.title.errors %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.text.label }}<br>
+                {{ form.text(class="form-control") }}<br>
+                {% for error in form.text.errors %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.is_published.label }}<br>
+                {{ form.is_published() }}<br>
+                {% for error in form.is_published.errors %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endfor %}
+            </p>
+            <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+            <div>{{ message }}</div>
+        </form>
+    </div>
+</div>
 {% endblock %}
