добавил поддержку изображений

--- a/templates/news/news-edit-page.html
+++ b/templates/news/news-edit-page.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <div class="container">
+    <div class="">
+        <a href="/news/" class="">Вернуться к новостям</a>
+    </div>
     <h1 class="text-center mb-3">Управление новостями</h1>
     <div class="row">
-        <div class="">
-            <a href="/news/create" class="btn btn-primary mb-3">Добавить новость</a>
-        </div>
         <div class="" style="overflow: auto">
             <table class="table">
             <thead>
@@ -23,7 +23,7 @@
                 <tr>
                     <td>{{ news_item.title }}</td>
                     <td>{{ news_item.text }}</td>
-                    <td>Автор</td>
+                    <td>{{ news_item.author.name }}</td>
                     <td>
                         <input type="checkbox" name="is_published"
                                {% if news_item.is_published %}checked{% endif %}
@@ -37,6 +37,9 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div class="">
+            <a href="/news/create" class="btn btn-primary mb-3">Добавить новость</a>
+        </div>
     
             <script>
             function updatePublicationStatus(newsId, isPublished) {
