--- a/templates/news/news-item-add-form.html
+++ b/templates/news/news-item-add-form.html
@@ -6,7 +6,7 @@
     </div>
     <div class="container d-flex justify-content-center">
         <div class="register-form-wrapper p-5">
-            <h1 class="mb-3">Редактирование новости</h1>
+            <h1 class="mb-3">Добавление новости</h1>
             {% include "news/news-base-form.html" %}
         </div>
     </div>
