--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="/static/css/forms.css">
+    <link rel="stylesheet" href="/static/css/pagination.css">
     <title>{{title}}</title>
 </head>
 <body>
@@ -52,8 +53,11 @@
     </nav>
 </header>
 <!-- Begin page content -->
-<main role="main" class="container">
+<main role="main" class="container" style="min-height: 85vh;">
     {% block content %}{% endblock %}
 </main>
+<footer class="py-5 mt-3 footer container">
+    <p class="text-center text-white fs-4">Фишинг-сайт</p>
+</footer>
 </body>
 </html>
