--- a/templates/news/news-base-form.html
+++ b/templates/news/news-base-form.html
@@ -18,7 +18,7 @@
             </div>
         {% endfor %}
     </p>
-    <p>
+    <div>
         {{ form.picture.label }}
         {{ form.picture(class="form-control", type="file") }}
         {% for error in form.picture.errors %}
@@ -26,7 +26,7 @@
                 {{ error }}
             </div>
         {% endfor %}
-    </p>
+    </div>
     <p>
         {{ form.is_published.label }}<br>
         {{ form.is_published() }}<br>
