ограничил доступ к админке

--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -4,9 +4,9 @@
 <div class="container">
 
     {% if current_user.is_authenticated %}
-    {% if current_user.role.value == "moderator" %}
-    <a href="/news/edit" class="btn btn-primary mb-3">Редактировать</a>
-    {% endif %}
+        {% if current_user.role.value == "moderator" or current_user.role.value == "admin"%}
+            <a href="/news/edit" class="btn btn-primary mb-3">Редактировать</a>
+        {% endif %}
     {% endif %}
     <div class="">
         <div class="row d-flex justify-content-center">
