доделал главную страницу

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,45 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<img src="../static/img/main.jpg" alt="" class="img-fluid">
+<h4 class="text-center my-5">Отзывы</h4>
+<div id="carouselExampleControls" class="carousel slide my-5" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="mark">
+                <p class="text-center">Михаил</p>
+                <p class="text-center">
+                    Отличный магазин! Заказал спиннинг и набор приманок — всё пришло быстро, упаковано аккуратно.
+                    Качество товара на
+                    высоте, цены приятные. Рекомендую!</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="mark">
+                <p class="text-center">Илья1</p>
+                <p class="text-center">
+                    Супер выбор для рыбака! Купил здесь зимнюю палатку и эхолот. Всё работает отлично, доставка без
+                    задержек. Обслуживание на
+                    уровне, буду покупать ещё!</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="mark">
+                <p class="text-center">Илья2</p>
+                <p class="text-center">
+                    Доволен покупкой! Взял катушку и леску — всё как в описании, без брака. Магазин надёжный,
+                    ассортимент радует. Спасибо,
+                    вернусь за новыми снастями!</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
 {% endblock %}
