--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="/static/css/forms.css">
     <link rel="stylesheet" href="/static/css/pagination.css">
+    <link rel="stylesheet" href="/static/css/index.css">
     <title>{{title}}</title>
 </head>
 <body>
@@ -38,19 +39,19 @@
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     {% if current_user.is_authenticated %}
-                        {% if current_user.role.value == "admin" %}
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/admin">АДМИН-ПАНЕЛЬ</a>
-                            </li>
-                        {% endif %}
-                        <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+                    {% if current_user.role.value == "admin" %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/admin">АДМИН-ПАНЕЛЬ</a>
+                    </li>
+                    {% endif %}
+                    <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
                     {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/login">Войти</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/register">Зарегистрироваться</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/login">Войти</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/register">Зарегистрироваться</a>
+                    </li>
                     {% endif %}
                 </ul>
             </div>
