--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,9 @@
 .mark{
-padding: 50px;
-padding-left:140px;
-padding-right:140px
+    padding: 50px;
+    padding-left:140px;
+    padding-right:140px;
+    background-color: darkseagreen
+}
+.carousel-control-prev, .carousel-control-next{
+    opacity: 10
 }
