--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -9,14 +9,37 @@
     {% endif %}
     <h2 class="text-center">Новости</h2>
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                data-bs-toggle="dropdown" aria-expanded="false">
-            Сортировка новостей
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="/news?sorting=new">Новые</a></li>
-            <li><a class="dropdown-item" href="/news?sorting=default">По умолчанию</a></li>
-        </ul>
+        <div class="row d-flex justify-content-between">
+            <div class="col-4">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                         data-bs-toggle="dropdown" aria-expanded="false">
+                    Сортировка новостей
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="/news?sorting=new">Новые</a></li>
+                    <li><a class="dropdown-item" href="/news?sorting=default">По умолчанию</a></li>
+                </ul>
+            </div>
+            <div class="col-4 d-flex justify-content-end">
+                <div>
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        Фильтр
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="/news?news_type=regular">Обычные</a></li>
+                        <li><a class="dropdown-item" href="/news?news_type=new">Новые</a></li>
+                        <li><a class="dropdown-item" href="/news?news_type=important">Важные</a></li>
+                    </ul>
+                </div>
+              
+
+                <a class="btn btn-danger mx-1" href="/news/">Сбросить фильтр</a>
+             
+            </div>
+        </div>
+        
+        
     </div>
 
     {% endif %}
@@ -25,71 +48,109 @@
             {% for item in news %}
             <div class="row d-flex justify-content-center">
                 <div class="col-12 col-md-6 my-4">
-                    <div class="news_block">
-                        <div>
-                            <h2>{{ item.title }}</h2>
+                
+                    {% if item.news_type.value == "regular" %}
+                        <div class="news_block">
+                            <div>
+                                <h2>{{ item.title }}</h2>
+                            </div>
+                            <div>
+                                <p><img class="w-100" src="../{{ item.picture }}" alt=""></p>
+                            </div>
+                            <div>
+                                <p>{{ item.text }}</p>
+                            </div>
+                            <a href="/news/{{ item.id }}" class="btn btn-secondary mb-2">Читать далее</a>
                         </div>
-                        <div>
-                            <p><img class="w-100" src="../{{ item.picture }}" alt=""></p>
+                    {% endif %}
+                    
+                    {% if item.news_type.value == "new" %}
+                        <div class="news_block border border-2 border-warning">
+                            <div>
+                                <span class="badge bg-warning text-dark p-3 fs-5 fw-regular">Новое</span>
+                            </div>
+                            <div>
+                                <h2>{{ item.title }}</h2>
+                            </div>
+                            <div>
+                                <p><img class="w-100" src="../{{ item.picture }}" alt=""></p>
+                            </div>
+                            <div>
+                                <p>{{ item.text }}</p>
+                            </div>
+                            <a href="/news/{{ item.id }}" class="btn btn-secondary mb-2">Читать далее</a>
                         </div>
-                        <div>
-                            <p>{{ item.text }}</p>
+                    {% endif %}
+                    
+                    {% if item.news_type.value == "important" %}
+                        <div class="news_block  border border-2 border-danger">
+                            <div>
+                                <span class="badge bg-danger text-white p-3 fs-5 fw-regular">Важно</span>
+                            </div>
+                            <div>
+                                <h2>{{ item.title }}</h2>
+                            </div>
+                            <div>
+                                <p><img class="w-100" src="../{{ item.picture }}" alt=""></p>
+                            </div>
+                            <div>
+                                <p>{{ item.text }}</p>
+                            </div>
+                            <a href="/news/{{ item.id }}" class="btn btn-secondary mb-2">Читать далее</a>
                         </div>
-                        <a href="/news/{{ item.id }}" class="btn btn-secondary mb-2">Читать далее</a>
-                    </div>
+                    {% endif %}
                 </div>
             </div>
 
-            <div class="row d-flex justify-content-center">
-                <div class="col-12 col-md-6 my-4">
-                    <div class="news_block border border-2 border-warning">
-                        <div>
-                            <span class="badge bg-warning text-dark p-3 fs-5 fw-regular">Новое</span>
-                        </div>
-                        <div>
-                            <h2>{{ item.title }}</h2>
-                        </div>
-                        <div>
-                            <p><img class="w-100" src="../{{ item.picture }}" alt=""></p>
-                        </div>
-                        <div>
-                            <p>{{ item.text }}</p>
-                        </div>
-                        <a href="/news/{{ item.id }}" class="btn btn-secondary mb-2">Читать далее</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row d-flex justify-content-center">
-                <div class="col-12 col-md-6 my-4">
-                    <div class="news_block  border border-2 border-danger">
-                        <div>
-                            <span class="badge bg-danger text-white p-3 fs-5 fw-regular">Важно</span>
-                        </div>
-                        <div>
-                            <h2>{{ item.title }}</h2>
-                        </div>
-                        <div>
-                            <p><img class="w-100" src="../{{ item.picture }}" alt=""></p>
-                        </div>
-                        <div>
-                            <p>{{ item.text }}</p>
-                        </div>
-                        <a href="/news/{{ item.id }}" class="btn btn-secondary mb-2">Читать далее</a>
-                    </div>
-                </div>
-            </div>
+           
             {% endfor %}
         </div>
     </div>
 
     <div class="pagination">
-        <a href="#" class="prev"><</a>
-        <a href="#" class="active">1</a>
-        <a href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">4</a>
-        <a href="#" class="next">></a>
+        <a onclick="handleClickPrev()" class="prev"><</a>
+        <a href="#" class="pag active">1</a>
+        <a class="pag">2</a>
+        <a class="pag">3</a>
+        <a class="pag">4</a>
+        <a class="pag">5</a>
+        <a onclick="handleClickNext()" href="#" class="next">></a>
     </div>
+
+    <script>
+
+        const host = "http://127.0.0.1:9000";
+        
+        function draw(page) {
+            let elements = document.querySelectorAll('.pag');
+            let i = 0;
+            for (let elem of elements) {
+                elem.innerHTML = page + i;
+                elem.href = `/news/?page=${page + i}`
+                i++;
+            }
+        }
+
+        draw({{page}});
+
+        function handleClickPrev() {
+            let page = {{page}};
+            if (page >= 2) {
+                window.location.href = host + `/news/?page=${page - 1}`;
+            }
+        }
+
+
+        function handleClickNext() {
+            let page = {{page}};
+            if (page < 6) {
+                window.location.href = host + `/news/?page=${page + 1}`;
+            }
+        }
+
+
+     
+
+    </script>
 </div>
 {% endblock %}
