--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                         <a class="nav-link active" aria-current="page" href="/news">Новости</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/items">Товары</a>
+                        <a class="nav-link active" aria-current="page" href="/products">Товары</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
