--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -17,8 +17,8 @@
                     Сортировка новостей
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="/news?sorting=new">Новые</a></li>
-                    <li><a class="dropdown-item" href="/news?sorting=default">По умолчанию</a></li>
+                    <li><a class="dropdown-item" href="?sorting=new">Новые</a></li>
+                    <li><a class="dropdown-item" href="?sorting=default">По умолчанию</a></li>
                 </ul>
             </div>
             <div class="col-4 d-flex justify-content-end">
@@ -28,9 +28,9 @@
                         Фильтр
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="/news?news_type=regular">Обычные</a></li>
-                        <li><a class="dropdown-item" href="/news?news_type=new">Новое</a></li>
-                        <li><a class="dropdown-item" href="/news?news_type=important">Важное</a></li>
+                        <li><a class="dropdown-item" href="?news_type=regular">Обычные</a></li>
+                        <li><a class="dropdown-item" href="?news_type=new">Новое</a></li>
+                        <li><a class="dropdown-item" href="?news_type=important">Важное</a></li>
                     </ul>
                 </div>
               
@@ -109,29 +109,43 @@
 
     <div class="pagination">
         <a onclick="handleClickPrev()" class="prev"><</a>
-        <a href="#" class="pag active">1</a>
+        <a href="" class="pag active">1</a>
         <a class="pag">2</a>
         <a class="pag">3</a>
         <a class="pag">4</a>
         <a class="pag">5</a>
-        <a onclick="handleClickNext()" href="#" class="next">></a>
+        <a onclick="handleClickNext()" href="" class="next">></a>
     </div>
 
     <script>
 
         const host = "http://127.0.0.1:9000";
+
+        if ({{page}} == 1) {
+                let element = document.querySelectorAll('.prev')[0];
+                element.remove()
+            }
+
+        if ({{page}} == {{page_quantity}}) {
+                let element = document.querySelectorAll('.next')[0];
+                element.remove()
+            }
         
-        function draw(page) {
+        function draw(page, total) {
             let elements = document.querySelectorAll('.pag');
             let i = 0;
             for (let elem of elements) {
-                elem.innerHTML = page + i;
-                elem.href = `/news/?page=${page + i}`
-                i++;
+                if (page + i <= total) {
+
+                    elem.innerHTML = page + i;
+                    elem.href = `/news/?page=${page + i}`
+                    i++;
+                }
+                else elem.remove()
             }
         }
 
-        draw({{page}});
+        draw({{page}}, {{page_quantity}});
 
         function handleClickPrev() {
             let page = {{page}};
@@ -143,13 +157,11 @@
 
         function handleClickNext() {
             let page = {{page}};
-            if (page < 6) {
+            if (page < {{page_quantity}}) {
                 window.location.href = host + `/news/?page=${page + 1}`;
             }
+            
         }
-
-
-     
 
     </script>
 </div>
