--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
                     <a class="nav-link active" aria-current="page" href="/cart"><img src="../static/img/cart.svg" alt="Корзина" class="cart-image"></a>
                         {% if current_user.role.value == "admin" %}
                             <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="https://rickhider.vercel.app/dHk9c3VtbWFyeSZ0PSVEMCVBMCVEMSU4QiVEMCVCMSVEMCVCMCVEMCVCQiVEMCVCQSVEMCVCMCZkPSVEMCVBMSVEMCVCMCVEMCVCOSVEMSU4MislRDAlQkUrJUQxJTgwJUQxJThCJUQwJUIxJUQwJUIwJUQwJUJCJUQwJUJBJUQwJUI1">СУПЕР-АДМИН-ПАНЕЛЬ</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/admin">АДМИН-ПАНЕЛЬ</a>
                             </li>
                         {% endif %}
